# cicd2

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  SKILLS.md
.gitea/workflows/: go-examples-helloworld.yaml  runtime-config.yaml  sudo-ops.yaml  test-pull.yaml
bootstrap/: bootstrap.md  bootstrap.sh  create-secrets.sh  gotk-sync.yaml
clusters/main/: kustomization.yaml
clusters/main/bazel-runner/: bazel-runner.yaml  kustomization.yaml
clusters/main/cockroach/: GitKustomization.yaml  cockroach-cluster-kustomization.yaml  cockroach-operator-kustomization.yaml  kustomization.yaml
clusters/main/dashboards/: kustomization.yaml
clusters/main/grafana/: kustomization.yaml  lgtm-stack.yaml
clusters/main/nativelink/: kustomization.yaml  nativelink.yaml
clusters/main/prisma/: kustomization.yaml  prisma-job.yaml
clusters/main/replicator/: kustomization.yaml  replicator.yaml
clusters/main/spark/: GitKustomization.yaml  kustomization.yaml
clusters/main/tofu-controller/: GitKustomization.yaml  kustomization.yaml  tf-controller-install.yaml
clusters/main/users/: Brian.yaml  kustomization.yaml
clusters/main/zot/: kustomization.yaml  zot.yaml
clusters/my-cluster/apps/: bazel-runner-sa.yaml  bazel-runner.yaml  cockroach-operator.yaml  cockroachdb-cluster.yaml  cockroachdb-sources.yaml  custom-dashboard-sample.yaml  forgejo-admin-setup.yaml  forgejo-admin-token-secret.yaml  gitea-terraform.yaml  minio.yaml  (+7 more)
day1-infra/: main.tf  registries.yaml  terraform.tfstate
day2-config/: .terraform.lock.hcl  GitKustomization.yaml  GitRepo.yaml  main.tf  terraform.tfstate
terraform/: main.tf
users/manifests/: Brian.yaml  kustomization.yaml
users/terraform/: main.tf
(+48 files in other folders)
