module(
    name = "cicd2_workspace",
    version = "1.0.0",
)

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "rules_go", version = "0.46.0")
bazel_dep(name = "rules_java", version = "7.4.0")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "protobuf", version = "26.0")
